--- a/pom.xml
+++ b/pom.xml
@@ -7,15 +7,38 @@
   <version>1.0-SNAPSHOT</version>
   <name>chat Maven Webapp</name>
   <url>http://maven.apache.org</url>
+
+  <properties>
+    <websocket-version>1.1</websocket-version>
+    <junit-version>3.8.1</junit-version>
+    <log4j-version>1.2.17</log4j-version>
+  </properties>
+
   <dependencies>
+    <!--Test-->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>${junit-version}</version>
       <scope>test</scope>
     </dependency>
+    <!--WebSocket-->
+    <dependency>
+      <groupId>javax.websocket</groupId>
+      <artifactId>javax.websocket-api</artifactId>
+      <version>${websocket-version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <!--Log-->
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>${log4j-version}</version>
+    </dependency>
   </dependencies>
+
   <build>
     <finalName>chat</finalName>
   </build>
+
 </project>
