--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,21 @@
     <websocket-version>1.1</websocket-version>
     <junit-version>3.8.1</junit-version>
     <log4j-version>1.2.17</log4j-version>
+    <hibernate-version>5.2.6.FINAL</hibernate-version>
   </properties>
 
   <dependencies>
+    <!--Hibernate-->
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>${hibernate-version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-entitymanager</artifactId>
+      <version>${hibernate-version}</version>
+    </dependency>
     <!--Test-->
     <dependency>
       <groupId>junit</groupId>
