--- a/pom.xml
+++ b/pom.xml
@@ -13,20 +13,11 @@
     <junit-version>3.8.1</junit-version>
     <log4j-version>1.2.17</log4j-version>
     <hibernate-version>5.2.6.FINAL</hibernate-version>
+    <mysql-version>5.1.38</mysql-version>
+    <hicari-version>2.5.1</hicari-version>
   </properties>
 
   <dependencies>
-    <!--Hibernate-->
-    <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-core</artifactId>
-      <version>${hibernate-version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-entitymanager</artifactId>
-      <version>${hibernate-version}</version>
-    </dependency>
     <!--Test-->
     <dependency>
       <groupId>junit</groupId>
@@ -46,6 +37,12 @@
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
       <version>${log4j-version}</version>
+    </dependency>
+    <!--MySQL-->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>${mysql-version}</version>
     </dependency>
   </dependencies>
 
