--- a/pom.xml
+++ b/pom.xml
@@ -15,16 +15,10 @@
     <hibernate-version>5.2.6.FINAL</hibernate-version>
     <mysql-version>5.1.38</mysql-version>
     <hicari-version>2.5.1</hicari-version>
+    <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
   </properties>
 
   <dependencies>
-    <!--Test-->
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>${junit-version}</version>
-      <scope>test</scope>
-    </dependency>
     <!--WebSocket-->
     <dependency>
       <groupId>javax.websocket</groupId>
