--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <mysql-version>5.1.38</mysql-version>
     <hicari-version>2.5.1</hicari-version>
     <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
+    <gson-version>2.8.1</gson-version>
   </properties>
 
   <dependencies>
@@ -37,6 +38,12 @@
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>${mysql-version}</version>
+    </dependency>
+    <!--JSON-->
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>${gson-version}</version>
     </dependency>
   </dependencies>
 
