--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <hicari-version>2.5.1</hicari-version>
     <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
     <gson-version>2.8.1</gson-version>
+    <junit-version>4.12</junit-version>
   </properties>
 
   <dependencies>
@@ -44,6 +45,13 @@
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
       <version>${gson-version}</version>
+    </dependency>
+    <!--jUnit-->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>${junit-version}</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
