--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,13 @@
   <url>http://maven.apache.org</url>
 
   <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <compiler-plugin.version>3.1</compiler-plugin.version>
+    <tomcat7-maven-plugin.version>2.2</tomcat7-maven-plugin.version>
+    <java-version>1.8</java-version>
     <websocket-version>1.1</websocket-version>
-    <junit-version>3.8.1</junit-version>
     <log4j-version>1.2.17</log4j-version>
-    <hibernate-version>5.2.6.FINAL</hibernate-version>
     <mysql-version>5.1.38</mysql-version>
-    <hicari-version>2.5.1</hicari-version>
-    <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
     <gson-version>2.8.1</gson-version>
     <junit-version>4.12</junit-version>
   </properties>
@@ -57,6 +57,39 @@
 
   <build>
     <finalName>chat</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>${compiler-plugin.version}</version>
+        <configuration>
+          <source>${java-version}</source>
+          <target>${java-version}</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.tomcat.maven</groupId>
+        <artifactId>tomcat7-maven-plugin</artifactId>
+        <version>${tomcat7-maven-plugin.version}</version>
+        <configuration>
+          <url>http://localhost:8080/manager/text</url>
+          <username>admin</username>
+          <password>admin</password>
+          <path>/${project.build.finalName}</path>
+          <warFile>target/${project.build.finalName}.war</warFile>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>
+                redeploy
+              </goal>
+            </goals>
+            <phase>package</phase>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
   </build>
 
 </project>
